force-app/main/default/objects/Country__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <length>200</length>
    <type>Text</type>
</CustomField>