force-app/main/default/objects/Country__c/fields/Calling_Code__c.field-meta.xml
<CustomField>
    <fullName>Calling_Code__c</fullName>
    <label>Calling Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>