force-app/main/default/objects/Country__c/fields/CannotEditClient__c.field-meta.xml
<CustomField>
    <fullName>CannotEditClient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CannotEditClient</label>
    <type>Checkbox</type>
</CustomField>