force-app/main/default/objects/Country__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <length>200</length>
    <type>Text</type>
</CustomField>