force-app/main/default/objects/Country__c/fields/ClientNameDisplay__c.field-meta.xml
<CustomField>
    <fullName>ClientNameDisplay__c</fullName>
    <label>ClientNameDisplay</label>
    <length>80</length>
    <type>Text</type>
</CustomField>