force-app/main/default/objects/Country__c/fields/HasOtherValue__c.field-meta.xml
<CustomField>
    <fullName>HasOtherValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasOtherValue</label>
    <type>Checkbox</type>
</CustomField>