force-app/main/default/objects/Country__c/fields/IPD_CC__c.field-meta.xml
<CustomField>
    <fullName>IPD_CC__c</fullName>
    <label>IPD CC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>