force-app/main/default/objects/Country__c/fields/IPD_To__c.field-meta.xml
<CustomField>
    <fullName>IPD_To__c</fullName>
    <label>IPD To</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>