force-app/main/default/objects/Country__c/fields/Iso2Code__c.field-meta.xml
<CustomField>
    <fullName>Iso2Code__c</fullName>
    <label>Iso2Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>