force-app/main/default/objects/Country__c/fields/Iso3Code__c.field-meta.xml
<CustomField>
    <fullName>Iso3Code__c</fullName>
    <label>Iso3Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>