force-app/main/default/objects/Country__c/fields/Kakao_CSC__c.field-meta.xml
<CustomField>
    <fullName>Kakao_CSC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kakao CSC</label>
    <type>Checkbox</type>
</CustomField>