force-app/main/default/objects/Country__c/fields/Law_settings__c.field-meta.xml
<CustomField>
    <fullName>Law_settings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Law settings</label>
    <type>Checkbox</type>
</CustomField>