force-app/main/default/objects/Country__c/fields/Line_CSC__c.field-meta.xml
<CustomField>
    <fullName>Line_CSC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line CSC</label>
    <type>Checkbox</type>
</CustomField>