force-app/main/default/objects/Country__c/fields/PicklistValueSet__c.field-meta.xml
<CustomField>
    <fullName>PicklistValueSet__c</fullName>
    <label>PicklistValueSet</label>
    <length>200</length>
    <type>Text</type>
</CustomField>