force-app/main/default/objects/Country__c/fields/Regional_warehouse__c.field-meta.xml
<CustomField>
    <fullName>Regional_warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional warehouse</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Countries</relationshipLabel>
    <relationshipName>Regional_warehouse</relationshipName>
    <type>Lookup</type>
</CustomField>