force-app/main/default/objects/Country__c/fields/SecondName__c.field-meta.xml
<CustomField>
    <fullName>SecondName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SecondName</label>
    <type>Checkbox</type>
</CustomField>