force-app/main/default/objects/Country__c/fields/StoreOrUser__c.field-meta.xml
<CustomField>
    <fullName>StoreOrUser__c</fullName>
    <label>StoreOrUser</label>
    <length>200</length>
    <type>Text</type>
</CustomField>