force-app/main/default/objects/Country__c/fields/tech_duplicate__c.field-meta.xml
<CustomField>
    <fullName>tech_duplicate__c</fullName>
    <description>To avoid duplicate countries</description>
    <externalId>true</externalId>
    <label>tech_duplicate</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>