force-app/main/default/objects/Country__c/fields/User_country__c.field-meta.xml
<CustomField>
    <fullName>User_country__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User country</label>
    <type>Checkbox</type>
</CustomField>