force-app/main/default/objects/Country__c/fields/Viber_CSC__c.field-meta.xml
<CustomField>
    <fullName>Viber_CSC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Viber CSC</label>
    <type>Checkbox</type>
</CustomField>