force-app/main/default/objects/Country__c/fields/Wechat__c.field-meta.xml
<CustomField>
    <fullName>Wechat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wechat</label>
    <type>Checkbox</type>
</CustomField>