force-app/main/default/objects/Country__c/fields/Wechat_CSC__c.field-meta.xml
<CustomField>
    <fullName>Wechat_CSC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wechat CSC</label>
    <type>Checkbox</type>
</CustomField>