force-app/main/default/objects/Country__c/fields/WhatsApp_CSC__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_CSC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WhatsApp CSC</label>
    <type>Checkbox</type>
</CustomField>