force-app/main/default/objects/Country__c/fields/Zalo_CSC__c.field-meta.xml
<CustomField>
    <fullName>Zalo_CSC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zalo CSC</label>
    <type>Checkbox</type>
</CustomField>