force-app/main/default/objects/Country__c/fields/Zone_CSC__c.field-meta.xml
<CustomField>
    <fullName>Zone_CSC__c</fullName>
    <label>Zone CSC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>