force-app/main/default/objects/Country__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Picklist__c</columns>
    <columns>PicklistValueSet__c</columns>
    <columns>Calling_Code__c</columns>
    <columns>Iso2Code__c</columns>
    <columns>Iso3Code__c</columns>
    <columns>Nationality__c</columns>
    <columns>Kakao__c</columns>
    <columns>Line__c</columns>
    <columns>Wechat__c</columns>
    <columns>WhatsApp__c</columns>
    <columns>Law_settings__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>